fix content width on small screens; Change About message a bit

--- a/src/App.css
+++ b/src/App.css
@@ -84,4 +84,7 @@ a.nav-link.active {
   margin: 2px;
 }
 
-
+.row {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
